--- a/snake/snake.less
+++ b/snake/snake.less
@@ -14,7 +14,7 @@ body {
     width: 360px;
     height: 420px;
     background-color: @bg-color;
-    margin: 100px auto;
+    margin: 50px auto 0;
     border: 8px solid black;
     border-radius: 40px;
     display: flex;
@@ -66,4 +66,11 @@ body {
         display: flex;
         justify-content: space-between;
     }
+}
+.btn-group{
+    width: 360px;
+    height: 100px;
+    margin: 20px auto 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
 }
