--- a/snake/snake.css
+++ b/snake/snake.css
@@ -10,7 +10,7 @@ body {
   width: 360px;
   height: 420px;
   background-color: #b7d4a8;
-  margin: 100px auto;
+  margin: 50px auto 0;
   border: 8px solid black;
   border-radius: 40px;
   display: flex;
@@ -52,4 +52,11 @@ body {
   width: 300px;
   display: flex;
   justify-content: space-between;
+}
+.btn-group {
+  width: 360px;
+  height: 100px;
+  margin: 20px auto 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
 }
