--- a/snake/snake.css
+++ b/snake/snake.css
@@ -10,7 +10,7 @@ body {
   width: 360px;
   height: 420px;
   background-color: #b7d4a8;
-  margin: 50px auto 0;
+  margin: 30px auto 0;
   border: 8px solid black;
   border-radius: 40px;
   display: flex;
@@ -55,8 +55,30 @@ body {
 }
 .btn-group {
   width: 360px;
-  height: 100px;
   margin: 20px auto 0;
   box-sizing: border-box;
+}
+.btn-group .up {
+  text-align: center;
+  line-height: 60px;
+  border: 1px solid #ccc;
+}
+.btn-group .left-right {
+  display: flex;
+  margin: 5px 0;
+}
+.btn-group .left-right .left,
+.btn-group .left-right .right {
+  flex: 1;
+  text-align: center;
+  line-height: 80px;
+  border: 1px solid #ccc;
+}
+.btn-group .left-right .left {
+  margin-right: 5px;
+}
+.btn-group .down {
+  text-align: center;
+  line-height: 60px;
   border: 1px solid #ccc;
 }
