🌈 style: 手机控制按钮样式优化

--- a/snake/snake.less
+++ b/snake/snake.less
@@ -71,10 +71,13 @@ body {
     width: 360px;
     margin: 20px auto 0;
     box-sizing: border-box;
+    button{
+        font-size: 20px;
+    }
     .up{
+        width: 360px;
         text-align: center;
         line-height: 60px;
-        border: 1px solid #ccc;
     }
     .left-right{
         display: flex;
@@ -83,15 +86,14 @@ body {
             flex: 1;
             text-align: center;
             line-height: 80px;
-            border: 1px solid #ccc;
         }
         .left{
             margin-right: 5px;
         }
     }
     .down{
+        width: 360px;
         text-align: center;
         line-height: 60px;
-        border: 1px solid #ccc;
     }
 }
