--- a/snake/snake.css
+++ b/snake/snake.css
@@ -58,10 +58,13 @@ body {
   margin: 20px auto 0;
   box-sizing: border-box;
 }
+.btn-group button {
+  font-size: 20px;
+}
 .btn-group .up {
+  width: 360px;
   text-align: center;
   line-height: 60px;
-  border: 1px solid #ccc;
 }
 .btn-group .left-right {
   display: flex;
@@ -72,13 +75,12 @@ body {
   flex: 1;
   text-align: center;
   line-height: 80px;
-  border: 1px solid #ccc;
 }
 .btn-group .left-right .left {
   margin-right: 5px;
 }
 .btn-group .down {
+  width: 360px;
   text-align: center;
   line-height: 60px;
-  border: 1px solid #ccc;
 }
